Document native hardening and wire five-tuple Temurin 25 CI
Rewrite the Core technical sections for Java 25: fail-closed native
locked-memory default, explicit heap downgrade, lifecycle-closed
NativeSecretMemory state machine, per-platform FFM backends, deployment
responsibilities (native-access grant, RLIMIT_MEMLOCK/CAP_IPC_LOCK,
child-JVM applyStrict), bounded in-memory guarantees, and the module/
classpath launcher flags. Add a Native memory and process hardening
section and refresh the repository structure and build instructions.

Replace the Java 21 CI with a five-tuple Temurin 25 matrix (Windows
x86-64, Linux x86-64/AArch64, macOS x86-64/AArch64) running assemble,
module-path test, and classpathTest; keep Spotless as an independent
non-skipping job. Consolidate the redundant build.yml into ci.yml and
move CodeQL to Temurin 25. No Java source changes.

Co-Authored-By: Claude <noreply@anthropic.com>